--- a/client/package.json
+++ b/client/package.json
@@ -15,12 +15,14 @@
     "@paypal/react-paypal-js": "^7.8.3",
     "@react-oauth/google": "^0.10.0",
     "@reduxjs/toolkit": "^1.9.3",
+    "autoprefixer": "^10.4.14",
     "axios": "^1.3.5",
     "braintree-web-drop-in-react": "^1.2.1",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.11.1",
     "react-spinners": "^0.13.8",
     "yup": "^1.1.1"
   },
