--- a/server/package.json
+++ b/server/package.json
@@ -19,9 +19,7 @@
     "express-jwt": "^8.4.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
-    "passport": "^0.6.0",
-    "passport-google-oauth20": "^2.0.0",
-    "passport-jwt": "^4.0.1"
+    "passport": "^0.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
